customizing nav menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<header id="header" class="container mx-auto ">
 			<nav id="nav-bar" class="container mx-auto px-6 tablet:px-8 laptop:px-10 desktop:px-12 py-5 flex justify-between items-center bg-neutral-800 rounded-b-md shadow-md">
 				<!-- Hamburger menu for mobile -->
-				 <div class="w-full flex justify-between items-center">
+				 <div class="w-full tablet:w-auto flex justify-between items-center">
 					 <div class="tablet:hidden">
 						<button class="mobile-menu-button p-2">
 							<i class="fas fa-bars text-gray-400"></i>
@@ -25,12 +25,12 @@
 						 <a class="nav-link" href="#home">Home</a>
 						 <a class="nav-link" href="#about">About Me</a>
 						 <a class="nav-link" href="#projects">Projects</a>
-						 <a class="nav-link" href="#experience">Profesional Experience</a>
+						 <a class="nav-link" href="#experience">Experience</a>
 						 <a class="nav-link" href="#contact">Contact</a>
 						</div>
 					</div>
 					<!-- Desktop Navigation -->
-					<div class="hidden tablet:flex flex-col tablet:flex-row tablet:space-x-6">
+					<div class="hidden tablet:flex tablet:flex-col laptop:flex-row tablet:space-y-4 laptop:space-y-0 laptop:space-x-20">
 						<a class="nav-link" href="#home">Home</a>
 						<a class="nav-link" href="#about">About Me</a>
 						<a class="nav-link" href="#projects">Projects</a>
@@ -39,7 +39,7 @@
 					</div>
 					<!-- Social icons moved to top level for mobile -->
 					 <div>
-						 <div class="flex space-x-4">
+						 <div class="flex space-x-6  mobile:px-6 tablet:px-10">
 							 <a class="icon-link text-2xl" href="https://www.linkedin.com/in/manuel-guillermo-cruz-sales-logistics07/">
 								 <i class="fab fa-linkedin"></i>
 							 </a>
@@ -50,11 +50,11 @@
 					 </div>
 			</nav>
 		</header>
-		<!-- <main>
-			<section id="home" class="hero-section">
+		<main>
+			<!-- <section id="home" class="hero-section">
 				<h1>Oh yeah</h1>
-			</section>
-			<section id="about" class="about-me">
+			</section> -->
+			<!-- <section id="about" class="about-me">
 				<h1>About me. oh  yeah</h1>
 			</section>
 			<section id="projects" class="project-grid">
@@ -65,9 +65,9 @@
 			</section>
 			<section id="contact" class="contact">
 				<h1>Oh yeah contact me</h1>
-			</section>
+			</section> -->
 		</main>
-		<footer>
+		<!-- <footer>
 			<h1>Made with love!</h1>
 		</footer> -->
 		<script src="src/scripts/script.js"></script>
