updating nav-link in nav-bar

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 					 <div class="flex flex-col space-y-4 mt-4">
 						 <a class="nav-link" href="#home">Home</a>
 						 <a class="nav-link" href="#about">About Me</a>
-						 <a class="nav-link" href="#projects">Projects</a>
 						 <a class="nav-link" href="#experience">Experience</a>
-						 <a class="nav-link" href="#contact">Contact</a>
+						 <a class="nav-link" href="#projects">Recent Work</a>
+						 <a class="nav-link" href="#contact">Get In Touch</a>
 						</div>
 					</div>
 					<!-- Desktop Navigation -->
 					<div class="hidden tablet:flex tablet:flex-col laptop:flex-row tablet:space-y-4 laptop:space-y-0 laptop:space-x-20">
 						<a class="nav-link" href="#home">Home</a>
 						<a class="nav-link" href="#about">About Me</a>
-						<a class="nav-link" href="#projects">Projects</a>
-						<a class="nav-link" href="#experience">Profesional Experience</a>
-						<a class="nav-link" href="#contact">Contact</a>
+						<a class="nav-link" href="#experience">Experience</a>
+						<a class="nav-link" href="#projects">Recent Work</a>
+						<a class="nav-link" href="#contact">Get In Touch</a>
 					</div>
 					<!-- Social icons moved to top level for mobile -->
 					 <div>
