--- a/index.html
+++ b/index.html
@@ -6,70 +6,75 @@
 		<title>My Software Engineer Portfolio</title>
 		<!-- Line to add link for Fonts -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap"/>
 		 <link rel="stylesheet" href="./src/styles/styles.css">
 	</head>
 	<body>
-		<header id="header" class="container mx-auto ">
-			<nav id="nav-bar" class="container mx-auto px-6 tablet:px-8 laptop:px-10 desktop:px-12 py-5 flex justify-between items-center bg-neutral-800 rounded-b-md shadow-md">
-				<!-- Hamburger menu for mobile -->
-				 <div class="w-full tablet:w-auto flex justify-between items-center">
-					 <div class="tablet:hidden">
-						<button class="mobile-menu-button p-2">
-							<i class="fas fa-bars text-gray-400"></i>
-						</button>
-					 </div>
-				 </div>
-				 <!-- Mobile Menu (hidden by default) -->
-				 <div class="mobile-menu hidden w-full tablet:hidden">
-					 <div class="flex flex-col space-y-4 mt-4">
-						 <a class="nav-link" href="#home">Home</a>
-						 <a class="nav-link" href="#about">About Me</a>
-						 <a class="nav-link" href="#experience">Experience</a>
-						 <a class="nav-link" href="#projects">Recent Work</a>
-						 <a class="nav-link" href="#contact">Get In Touch</a>
-						</div>
-					</div>
-					<!-- Desktop Navigation -->
-					<div class="hidden tablet:flex tablet:flex-col laptop:flex-row tablet:space-y-4 laptop:space-y-0 laptop:space-x-20">
-						<a class="nav-link" href="#home">Home</a>
-						<a class="nav-link" href="#about">About Me</a>
-						<a class="nav-link" href="#experience">Experience</a>
-						<a class="nav-link" href="#projects">Recent Work</a>
-						<a class="nav-link" href="#contact">Get In Touch</a>
-					</div>
-					<!-- Social icons moved to top level for mobile -->
-					 <div>
-						 <div class="flex space-x-6  mobile:px-6 tablet:px-10">
-							 <a class="icon-link text-2xl" href="https://www.linkedin.com/in/manuel-guillermo-cruz-sales-logistics07/">
-								 <i class="fab fa-linkedin"></i>
-							 </a>
-							 <a class="icon-link text-2xl" href="https://github.com/MemoCSales">
-								 <i class="fab fa-github"></i>
-							 </a>
+		<div class="bg-primary font-mono">
+			<header id="header" class="container mx-auto">
+				<nav id="nav-bar" class="container mx-auto px-6 tablet:px-8 laptop:px-10 desktop:px-12 py-5 flex justify-between items-center bg-secondary rounded-b-md shadow-md">
+					<!-- Hamburger menu for mobile -->
+					 <div class="w-full tablet:w-auto flex justify-between items-center">
+						 <div class="tablet:hidden">
+							<button class="mobile-menu-button p-2">
+								<i class="fas fa-bars text-text"></i>
+							</button>
 						 </div>
 					 </div>
-			</nav>
-		</header>
-		<main>
-			<!-- <section id="home" class="hero-section">
-				<h1>Oh yeah</h1>
-			</section> -->
-			<!-- <section id="about" class="about-me">
-				<h1>About me. oh  yeah</h1>
+					 <!-- Mobile Menu (hidden by default) -->
+					 <div class="mobile-menu hidden w-full tablet:hidden">
+						 <div class="flex flex-col space-y-4 mt-4">
+							 <a class="nav-link" href="#home">Home</a>
+							 <a class="nav-link" href="#about">About Me</a>
+							 <a class="nav-link" href="#experience">Experience</a>
+							 <a class="nav-link" href="#projects">Recent Work</a>
+							 <a class="nav-link" href="#contact">Get In Touch</a>
+							</div>
+						</div>
+						<!-- Desktop Navigation -->
+						<div class="hidden tablet:flex tablet:flex-col laptop:flex-row tablet:space-y-4 laptop:space-y-0 laptop:space-x-20">
+							<a class="nav-link" href="#home">Home</a>
+							<a class="nav-link" href="#about">About Me</a>
+							<a class="nav-link" href="#experience">Experience</a>
+							<a class="nav-link" href="#projects">Recent Work</a>
+							<a class="nav-link" href="#contact">Get In Touch</a>
+						</div>
+						<!-- Social icons moved to top level for mobile -->
+						 <div>
+							 <div class="flex space-x-6  mobile:px-6 tablet:px-10">
+								 <a class="icon-link text-2xl" href="https://www.linkedin.com/in/manuel-guillermo-cruz-sales-logistics07/">
+									 <i class="fab fa-linkedin"></i>
+								 </a>
+								 <a class="icon-link text-2xl" href="https://github.com/MemoCSales">
+									 <i class="fab fa-github"></i>
+								 </a>
+							 </div>
+						 </div>
+				</nav>
+			</header>
+		</div>
+		<div class="hero min-h-screen bg-primary py-0 tablet:py-20">
+			<section>
+				<div class="container mx-auto px-10 flex flex-col tablet:flex-row items-center justify-between">
+					<div class="flex-1 tablet:pr-12 items-center order-last tablet:order-first">
+						<h1 class="font-mono font-bold text-text-light mb-6">
+							<span class="block text-4xl tablet:text-5xl laptop:text-5xl mb-2">Hi there!</span>
+							<span class="block text-4xl tablet:text-5xl laptop:text-5xl">I'm Guillermo Sales</span>
+						</h1>
+						<p class="font-mono text-lg tablet:text-xl  text-text leading-relaxed">
+							I am a software developer passionate about problem solving and continuous learning. After discovering my interest in programming during my professional career, I fully committed myself to this path, embracing the philosophy “learning to learn” at 42 School.
+						</p>
+					</div>
+					<div class="flex-1 mt-12 pb-10 tablet:pb-0 tablet:mt-0 flex justify-center order-first tablet:order-last">
+						<img 
+						src="https://res.cloudinary.com/dbnex3949/image/upload/v1736509889/profile_picture_mgcs_sbfppw.jpg" 
+						alt="profile_picture_mgcs"
+						class="rounded-full w-64 h-64 object-cover shadow-sm">
+					</div>
+				</div>
 			</section>
-			<section id="projects" class="project-grid">
-				<h1>Project Grid. oh yeah</h1>
-			</section>
-			<section id="experience" class="pro-experience">
-				<h1>Pro Experience oh yeah</h1>
-			</section>
-			<section id="contact" class="contact">
-				<h1>Oh yeah contact me</h1>
-			</section> -->
-		</main>
-		<!-- <footer>
-			<h1>Made with love!</h1>
-		</footer> -->
+		</div>
+		<footer></footer>
 		<script src="src/scripts/script.js"></script>
 	</body>
 </html>
