adding CTA in hero section and styling

--- a/index.html
+++ b/index.html
@@ -61,9 +61,19 @@
 							<span class="block text-4xl tablet:text-5xl laptop:text-5xl mb-2">Hi there!</span>
 							<span class="block text-4xl tablet:text-5xl laptop:text-5xl">I'm Guillermo Sales</span>
 						</h1>
-						<p class="font-mono text-lg tablet:text-xl  text-text leading-relaxed">
-							I am a software developer passionate about problem solving and continuous learning. After discovering my interest in programming during my professional career, I fully committed myself to this path, embracing the philosophy “learning to learn” at 42 School.
+						<p class="font-mono pb-5 text-lg tablet:text-xl  text-text leading-relaxed">
+							I am a software developer passionate about problem solving and continuous learning. After discovering my interest in programming during my professional career, I fully committed myself to this path, embracing the philosophy “learn how to learn” at 42 School.
 						</p>
+						<!-- Add the CTA button -->
+						 <div>
+							 <a href="#about"
+								 class="inline-block px-6 py-3 text-lg font-mono
+								 text-primary bg-accent rounded-md shadow-glow hover:shadow-glow-hover 
+								 hover:bg-opacity-90 transition-all duration-300">
+								Let's go!
+								<i class="fas fa-arrow-right ml-2"></i>
+							</a>
+						 </div>
 					</div>
 					<div class="flex-1 mt-12 pb-10 tablet:pb-0 tablet:mt-0 flex justify-center order-first tablet:order-last">
 						<img 
