adding about me section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,71 @@
 				</div>
 			</section>
 		</div>
+		<div id="about" class="about min-h-screen bg-primary py-0 tablet:py-20">
+			<section class="container mx-auto px-10">
+				<!-- Title -->
+				 <h2 class="font-mono font-bold text-text-light text-3xl tablet:text-4xl mb-12 relative">
+					<span class="text-accent">#</span> About Me
+				 </h2>
+
+				 <!-- Content -->
+				  <div class="flex flex-col tablet:flex-row gap-10">
+					<!-- Text -->
+					 <div class="flex-1 space-y-6">
+						<p class="font-mono text-text text-lg leading-relaxed">
+							Hello! My name is Guillermo, and I enjoy creating things that make your live easier. 
+                    		My interest in software development started back when I decided to try the Harvard
+							CS Computer Science and AI course — turns out understanding memory allocation in C
+							taught me a lot about file descriptors, memory management, virtualization,
+							Object Orient Programming, and so much more!
+						</p>
+						<p class="font-mono text-text text-lg leading-relaxed">
+							Now, and I've had the privilege of learning at 42 School, 
+                    		where I've developed a strong foundation in software development fundamentals,
+							peer-to-peer learning, teamwork, resilience, soft-skills and gained experience 
+							with various technologies.
+						</p>
+
+						<!-- Skills Grid -->
+						 <div class="mt=8">
+							<h3 class="font-mono text-text-light text-xl mb-4">
+								Technologies I've been working with:
+							</h3>
+							<div class="grid grid-cols-2 tablet:grid-cols-3 gap-4">
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>C</span>
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>C++</span>
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>Git</span>
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>Shell</span>
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>Docker</span>
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>Arduino</span>
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>HTML && CSS</span>
+								<span class="font-mono text-text"><i class="fas fa-caret-right text-accent mr-2"></i>JavaScript</span>
+							</div>
+						 </div>
+					 </div>
+
+					 <!-- Image Container -->
+					  <div class="flex-1 flex justify-center items-start tablet:items-center">
+						<div class="relative group grid grid-cols-1 tablet:grid-rows-2 gap-4">
+							<div class="relative">
+								<div class="absolute -inset-0.5 bg-accent rounded-lg blur opacity-20 group-hover:opacity-30 transition duration-300"></div>
+								<img src="https://res.cloudinary.com/dbnex3949/image/upload/v1736518292/IMG_4105_l1nnvu.jpg" 
+									alt="about me image"
+									class="relative rounded-lg w-full max-w-md hover:-translate-y-1 transition duration-300"
+									>
+							</div>
+							<div class="relative">
+								<div class="absolute -inset-0.5 bg-accent rounded-lg blur opacity-20 group-hover:opacity-30 transition duration-300"></div>
+								<img src="https://res.cloudinary.com/dbnex3949/image/upload/v1736518462/IMG_4167_lvh9ea.jpg" 
+								alt="about me image 2"
+								class="relative rounded-lg w-full max-w-md hover:-translate-y-1 transition duration-300"
+								>
+							</div>
+						</div>
+					  </div>
+				  </div>
+			</section>
+		</div>
 		<footer></footer>
 		<script src="src/scripts/script.js"></script>
 	</body>
