--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- Line to add link for Fonts -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap"/>
-		 <link rel="stylesheet" href="/src/styles/styles.css">
+		 <link rel="stylesheet" href="./src/styles/styles.css">
 	</head>
 	<body>
 		<div class="bg-primary font-mono">
