--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap"/>
 		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="/src/scripts/script.js"></script>
 	</head>
 	<body>
 		<div class="bg-primary font-mono">
@@ -150,6 +151,5 @@
 			</section>
 		</div>
 		<footer></footer>
-		<script src="src/scripts/script.js"></script>
 	</body>
 </html>
