refactor: rm unused files and directories

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 		<!-- Line to add link for Fonts -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap"/>
-		<script type="module" src="/src/main.js"></script>
-		<script type="module" src="/src/scripts/script.js"></script>
+		 <link rel="stylesheet" href="/src/style.css">
 	</head>
 	<body>
 		<div class="bg-primary font-mono">
@@ -151,5 +150,6 @@
 			</section>
 		</div>
 		<footer></footer>
+		<script src="src/script.js"></script>
 	</body>
 </html>
