update:index file

--- a/index.html
+++ b/index.html
@@ -150,6 +150,6 @@
 			</section>
 		</div>
 		<footer></footer>
-		<script type="module" src="src/script.js"></script>
+		<script type="module" src="/src/script.js"></script>
 	</body>
 </html>
